--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,9 +4,18 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
-- task: Docker@2
-  inputs:
-    containerRegistry: 'docker-hub perso'
-    repository: 'aspnet-docker'
-    command: 'buildAndPush'
-    Dockerfile: '**/Dockerfile'
+stages:
+- stage: Build
+  displayName: Build image
+  jobs:
+  - job: Build
+    displayName: Build
+    pool:
+      vmImage: ubuntu-latest
+    steps:
+    - task: Docker@2
+      inputs:
+        containerRegistry: 'docker-hub perso'
+        repository: 'aspnet-docker'
+        command: 'buildAndPush'
+        Dockerfile: '**/Dockerfile'
